# FawMuseumAgent

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  doc_extracted.txt  main.py  museum_robot_architecture.docx  pyproject.toml  robot_agent_architecture .md
config/: blocked_keywords.yaml  intents.yaml  llm.yaml  system_prompts.yaml
docs/: intent_recognition.md
src/faw_museum/: agent.py
src/faw_museum/config/: loader.py
src/faw_museum/graph/: builder.py  checkpoint.py  graph.py  state.py
src/faw_museum/graph/nodes/: chitchat.py  confirm.py  content_filter.py  dispatch.py  guard.py  intent.py  intent_router.py  knowledge.py  mute.py  response.py  router.py
src/faw_museum/llm/: __init__.py
